--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -12,13 +12,13 @@
 %---------------------------------------------------------
   \cventry
     {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Politecnico di Torino} % Institution
+    {Turin, Italy} % Location
+    {Sep. 2012 - Mar. 2016} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
