--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Site Reliability Engineer at fintech company KarrotPay. Have led growth at infrastructure departments in two fintech companies as lead engineer and founding member. 12+ years of diverse software engineering experience with specialties in software architecture design, infrastructure operation, backend development, and security engineering.
+I'm a passionate full stack developer, with special interest in the latest web technologies. I think of myself as a good problem solver, always having the big picture in mind, while also being able to dive down into the tiny little details.
 
-Love to contribute to open sources and tech communities by sharing knowledge and experience. Prefers a command line interface environment as a big fan of Vim, Linux, and macOS. Always trying to customize to find the most optimal environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools.
+I started as a frontend developer using Python and Javascript, then I moved to backend programming and distributed systems, using completely different languages. I have experience in Rust and Typescript, but also in more niche languages like Elixir and Elm.
 \end{cvparagraph}
