--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -72,7 +72,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {} % {\today}
-  {} % {Tommaso Pifferi~~~·~~~Résumé}
+  {Tommaso Pifferi~~~·~~~Résumé}
   {\thepage}
 
 
@@ -83,7 +83,7 @@
 \input{resume/summary.tex}
 \input{resume/experience.tex}
 \input{resume/education.tex}
-\input{resume/projects.tex}
+\input{resume/honors.tex}
 
 
 %-------------------------------------------------------------------------------
