--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -35,7 +35,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Gathered business requirements to help an enterprise organization transition to a software-based HelpDesk and Knowledge Base system.}
         \item {Implemented a tailor-made solution for the client that involved the development of several C\# modules, used both for frontend interactions as well as for application analytics.}
-        \item {Deployed said solution on the client' on-premise infrastructure, along with custom modules for performing SSO.}
+        \item {Deployed said solution on the client' on-premises infrastructure, along with custom modules for performing SSO.}
       \end{cvitems}
     }
 
