--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -12,5 +12,5 @@
 %---------------------------------------------------------
 I'm a passionate full stack developer, with special interest in the latest web technologies. I think of myself as a good problem solver, always having the big picture in mind, while also being able to dive down into the tiny little details.
 
-I started as a frontend developer using Python and Javascript, then I moved to backend programming and distributed systems, using completely different languages. I have experience in Rust and Typescript, but also in more niche languages like Elixir and Elm.
+I started as a frontend developer using Python and Javascript, then I moved to backend programming and distributed systems, using many different technologies. I have experience in Rust and Typescript, but also in more niche languages like Elixir and Elm.
 \end{cvparagraph}
