--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,6 +53,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Tommaso}{Pifferi}
 \position{Software Engineer}
+\address{Milan, Italy}
 \email{p.tommy93@gmail.com}
 \homepage{tommasopifferi.com}
 \github{neslinesli93}
@@ -72,8 +73,8 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {} % {\today}
-  {Tommaso Pifferi~~~·~~~Résumé}
-  {\thepage}
+  {} % {Tommaso Pifferi~~~·~~~Résumé}
+  {} % {\thepage}
 
 
 %-------------------------------------------------------------------------------
