--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,7 +17,7 @@
     {Nov. 2018 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked on the core Claims Management system, written in Elixir and Elm, which hosts hundreds of thousands of claims.}
+        \item {Worked on the core Claims Management system, written in Elixir and Elm, which hosts hundreds of thousands of claims and processes hundreds of millions of euros in claims compensations every year.}
         \item {Developed libraries, microservices and services in either Elixir or Rust, to support the internal claims department with third-party integrations: regulatory entities, bank payments systems, physical mail delivery services.}
         \item {Developed a service in Rust and React to allow external car body repair shops to handle their appointments and help them interact with the internal claims department.}
         \item {Set up message queues for asynchronous processing of messages using RabbitMQ, and used them to feed data into Redshift and other Business Intelligence tools.}
@@ -35,7 +35,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Gathered business requirements to help an enterprise organization transition to a software-based HelpDesk and Knowledge Base system.}
         \item {Implemented a tailor-made solution for the client that involved the development of several C\# modules, used both for frontend interactions as well as for application analytics.}
-        \item {Deployed said solution on the client' on-premises infrastructure, along with custom modules for performing SSO.}
+        \item {Deployed said solution on the client on-premises infrastructure, along with custom modules for performing SSO.}
       \end{cvitems}
     }
 
@@ -60,7 +60,7 @@
     {Apr. 2015 - Jul. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented E2E tests for an application built with Javascript and Cordova, which ran on tablets used by customers to handle their shop' orders, stock, and so on.}
+        \item {Implemented E2E tests for an application built with Javascript and Cordova, which ran on tablets used by customers to handle their shop' orders, invoices, stock, etc.}
         \item {Worked on several sections of the AngularJS frontend to add features and perform bug fixes.}
       \end{cvitems}
     }
